--- a/24SportWebkatalog/24SportWebkatalog.csproj
+++ b/24SportWebkatalog/24SportWebkatalog.csproj
@@ -133,10 +133,12 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CatalogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\CatalogItem.cs" />
     <Compile Include="Models\OurdbContext.cs" />
     <Compile Include="Models\UserAccount.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -181,6 +183,7 @@
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Account\Loggedin.cshtml" />
     <Content Include="Views\Account\Index.cshtml" />
+    <Content Include="Views\Catalog\MainCatalog.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
