Refactored to pull data from database

--- a/24SportWebkatalog/Web.config
+++ b/24SportWebkatalog/Web.config
@@ -79,5 +79,6 @@
   </entityFramework>
   <connectionStrings>
     <add name="Model1" connectionString="server=mysql56.unoeuro.com;user id=easjtestside_dk;password=fabianwendell123;database=easjtestside_dk_db;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient" />
+    <add name="CatalogModel" connectionString="server=mysql56.unoeuro.com;user id=easjtestside_dk;password=fabianwendell123;database=easjtestside_dk_db;persistsecurityinfo=True" providerName="MySql.Data.MySqlClient"/>
   </connectionStrings>
 </configuration>
