--- a/24SportWebkatalog/24SportWebkatalog.csproj
+++ b/24SportWebkatalog/24SportWebkatalog.csproj
@@ -151,6 +151,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\CatalogItem.cs" />
+    <Compile Include="Models\CatalogModel.cs" />
     <Compile Include="Models\Model1.cs" />
     <Compile Include="Models\OurdbContext.cs" />
     <Compile Include="Models\UserAccount.cs" />
