--- a/24SportWebkatalog/24SportWebkatalog.csproj
+++ b/24SportWebkatalog/24SportWebkatalog.csproj
@@ -165,6 +165,21 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\BS.ME50.1.png" />
+    <Content Include="Images\BS.ME50.2.png" />
+    <Content Include="Images\BS.ME50.png" />
+    <Content Include="Images\BS.ME71.1.png" />
+    <Content Include="Images\BS.ME71.2.png" />
+    <Content Include="Images\BS.ME71.png" />
+    <Content Include="Images\Medalje1.png" />
+    <Content Include="Images\Medalje2.png" />
+    <Content Include="Images\Medalje3.png" />
+    <Content Include="Images\Medalje4.png" />
+    <Content Include="Images\Medalje5.png" />
+    <Content Include="Images\Medalje6.png" />
+    <Content Include="Images\Medalje7.png" />
+    <Content Include="Images\Medalje8.png" />
+    <Content Include="Images\Medalje9.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
